@@ -1,3 +1,8 @@
+2006-02-19 12:07 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/2Controls/GormTextFieldAttributesInspector.m: Correction 
+	for bug#15780.
+
 2006-02-09 23:36 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormInfo.plist: Change "RELEASE" to SVN to indicate that 1.0.5 is
